syntax = "proto3";

package cart;

import "google/protobuf/timestamp.proto";
import "cart-service/cart.proto";

option go_package = "cart-service/cart";

message CartItemResponse {
    string id = 1;
    string cart = 2;
    string product = 3;
    int64 quantity = 4;
    float price = 5;
    string currency = 6;
    float sub_total = 7;
    google.protobuf.Timestamp created_at = 8;
}

message CartTxResult {
    CartItemResponse cart_item = 1;
    Cart cart = 2;
}

message RemoveCartTxResult {
    Cart cart = 1;
}

message GetCartItemByIDRequest {
    string id = 1;
}

message GetCartItemsByCartRequest {
    string id = 1;
}

message GetCartItemsByCartResponse {
    repeated CartItemResponse cart_item = 1;
}

message GetCartItemByProductIDRequest {
    string id = 1;
}

message AddtoCartRequest {
    string product_id = 1;
    int64 quantity = 2;
    string user_id = 3;
}

message UpdateCartTxRequest {
    string id = 1;
    int64 quantity = 2;
}

message RemoveCartTxRequest {
    string id = 1;
}

service CartItemService {
    rpc AddToCartTx(AddtoCartRequest) returns (CartTxResult){}
    rpc UpdateCartTx(UpdateCartTxRequest) returns (CartTxResult){}
    rpc RemoveCartTx(RemoveCartTxRequest) returns (RemoveCartTxResult){}
    rpc GetCartItem(GetCartItemByIDRequest) returns (CartItemResponse){}
    rpc GetCartItemsByCart(GetCartItemsByCartRequest) returns (GetCartItemsByCartResponse){}
    rpc GetCartItemByProductID(GetCartItemByProductIDRequest) returns (CartItemResponse){}
}